Bug 383073 - importwizard crashed on terminating
Summary: importwizard crashed on terminating
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: importwizard (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2017-08-03 09:18 UTC by necker
Modified: 2017-09-09 06:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description necker 2017-08-03 09:18:07 UTC
Application: importwizard (5.5.2)

Qt Version: 5.6.2
Frameworks Version: 5.32.0
Operating System: Linux 4.4.76-1-default x86_64
Distribution: "openSUSE Leap 42.3"

-- Information about the crash:
- What I was doing when the application crashed:
I tried to import mbox files to Kmail folders. The import itself seems to work, but the importwizard crashes on terminating.

The crash can be reproduced every time.

-- Backtrace:
Application: PIM-Import-Werkzeug (importwizard), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ffa528b3980 (LWP 27310))]

Thread 2 (Thread 0x7ffa23fff700 (LWP 27312)):
#0  0x00007ffa52055d2d in read () at /lib64/libpthread.so.0
#1  0x00007ffa4ba7e750 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007ffa4ba3de49 in g_main_context_check () at /usr/lib64/libglib-2.0.so.0
#3  0x00007ffa4ba3e2a8 in  () at /usr/lib64/libglib-2.0.so.0
#4  0x00007ffa4ba3e42c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#5  0x00007ffa5058e1ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#6  0x00007ffa5053bbfb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#7  0x00007ffa50376f5a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#8  0x00007ffa4c267295 in  () at /usr/lib64/libQt5DBus.so.5
#9  0x00007ffa5037ba29 in  () at /usr/lib64/libQt5Core.so.5
#10 0x00007ffa5204e744 in start_thread () at /lib64/libpthread.so.0
#11 0x00007ffa4fa72aad in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7ffa528b3980 (LWP 27310)):
[KCrash Handler]
#6  0x00007ffa4ed4d01e in MailImporter::Filter::~Filter() () at /usr/lib64/libKF5MailImporter.so.5
#7  0x00007ffa4ed56de9 in MailImporter::FilterMBox::~FilterMBox() () at /usr/lib64/libKF5MailImporter.so.5
#8  0x00007ffa524eb616 in qDeleteAll<QList<MailImporter::Filter*>::const_iterator> (end=..., begin=...) at /usr/include/qt5/QtCore/qalgorithms.h:317
#9  0x00007ffa524eb616 in qDeleteAll<QList<MailImporter::Filter*> > (c=...) at /usr/include/qt5/QtCore/qalgorithms.h:325
#10 0x00007ffa524eb616 in ManualSelectFilterPage::~ManualSelectFilterPage() (this=0x2de6ed0, __in_chrg=<optimized out>) at /usr/src/debug/akonadi-import-wizard-17.04.2/src/manual/manualselectfilterpage.cpp:86
#11 0x00007ffa524eb689 in ManualSelectFilterPage::~ManualSelectFilterPage() (this=0x2de6ed0, __in_chrg=<optimized out>) at /usr/src/debug/akonadi-import-wizard-17.04.2/src/manual/manualselectfilterpage.cpp:89
#12 0x00007ffa505666c5 in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#13 0x00007ffa5127bb2f in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#14 0x00007ffa4cd4501e in  () at /usr/lib64/libKF5WidgetsAddons.so.5
#15 0x00007ffa505666c5 in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#16 0x00007ffa5127bb2f in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#17 0x00007ffa4cd49109 in KPageWidget::~KPageWidget() () at /usr/lib64/libKF5WidgetsAddons.so.5
#18 0x00007ffa505666c5 in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#19 0x00007ffa5127bb2f in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#20 0x00007ffa524ef079 in ImportWizard::~ImportWizard() (this=0x291d140, __in_chrg=<optimized out>) at /usr/src/debug/akonadi-import-wizard-17.04.2/src/importwizard.cpp:112
#21 0x0000000000402538 in main(int, char**) (argc=3, argv=<optimized out>) at /usr/src/debug/akonadi-import-wizard-17.04.2/src/main.cpp:83

Reported using DrKonqi
Comment 1 Laurent Montel 2017-09-09 06:32:23 UTC
Git commit b17684e11eaf80cbfa0d8a25f474170c8fdd1db0 by Montel Laurent.
Committed on 09/09/2017 at 06:31.
Pushed by mlaurent into branch 'Applications/17.08'.

Fix Bug 383073 - importwizard crashed on terminating

FIXED-IN: 5.6.2

M  +0    -4    src/mailimporter/filters.cpp

https://commits.kde.org/mailimporter/b17684e11eaf80cbfa0d8a25f474170c8fdd1db0