Fix Bug 383073 - importwizard crashed on terminating

FIXED-IN: 5.6.2
BUG: 383073